[gd_scene load_steps=5 format=3 uid="uid://cr0tyqkwldoh7"]

[ext_resource type="Script" path="res://Objects/background/background.gd" id="1_s7xmo"]
[ext_resource type="Texture2D" uid="uid://1f2e2y8sb8hn" path="res://Levels/level01/background/background-01.png" id="2_txohw"]
[ext_resource type="Texture2D" uid="uid://bfy1hxavpnayi" path="res://Levels/level01/background/background-02.png" id="3_5emvt"]
[ext_resource type="Texture2D" uid="uid://c5huq4soh2e53" path="res://Levels/level01/background/background-03.png" id="4_ofko7"]

[node name="background" type="Node2D"]
script = ExtResource("1_s7xmo")

[node name="layer1" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(1800, -4)
texture = ExtResource("2_txohw")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 240)

[node name="layer2" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(1800, -4)
texture = ExtResource("3_5emvt")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 240)

[node name="layer3" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(1800, -4)
texture = ExtResource("4_ofko7")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 240)
